@@ -18,3 +18,5 @@ Fixed Run in Debugger under Haiku
 Fixed adding files to a module in the code library via file chooser
 Automatically remove libsupc++ from Haiku GCC4 projects under other platforms
 Preferences window now reports the unavailability of external tools like fastdep and ccache
+Source control is (optionally) integrated with projects now
+Start window has a keyboard shortcut to choose from the list -- Alt + number
